--- a/quokyuzi.dic.yaml
+++ b/quokyuzi.dic.yaml
@@ -3801,48 +3801,48 @@
 鹺	tsò	
 齹	tsò	
 坐	tsõ
-㔬	tséuk
-㚟	tséuk
-㪕	tséuk
-㪬	tséuk
-㲋	tséuk
-䇎	tséuk
-䓬	tséuk
-倬	tséuk
-卓	tséuk
-噱	tséuk	
-娖	tséuk
-婥	tséuk
-婼	tséuk
-戳	tséuk
-桌	tséuk
-棤	tséuk
-棹	tséuk
-汋	tséuk
-淖	tséuk
-灂	tséuk
-灼	tséuk
-焯	tséuk	
-獡	tséuk
-皵	tséuk	
-碏	tséuk
-磭	tséuk
-穛	tséuk
-窧	tséuk
-綽	tséuk
-繛	tséuk
-芍	tséuk
-蔟	tséuk	
-趞	tséuk
-趠	tséuk
-踔	tséuk
-辵	tséuk
-逴	tséuk
-鵲	tséuk
-𠦝	tséuk
-𢂚	tséuk
-𥇍	tséuk
-𦋐	tséuk
+㔬	tseúk
+㚟	tseúk
+㪕	tseúk
+㪬	tseúk
+㲋	tseúk
+䇎	tseúk
+䓬	tseúk
+倬	tseúk
+卓	tseúk
+噱	tseúk	
+娖	tseúk
+婥	tseúk
+婼	tseúk
+戳	tseúk
+桌	tseúk
+棤	tseúk
+棹	tseúk
+汋	tseúk
+淖	tseúk
+灂	tseúk
+灼	tseúk
+焯	tseúk	
+獡	tseúk
+皵	tseúk	
+碏	tseúk
+磭	tseúk
+穛	tseúk
+窧	tseúk
+綽	tseúk
+繛	tseúk
+芍	tseúk
+蔟	tseúk	
+趞	tseúk
+趠	tseúk
+踔	tseúk
+辵	tseúk
+逴	tseúk
+鵲	tseúk
+𠦝	tseúk
+𢂚	tseúk
+𥇍	tseúk
+𦋐	tseúk
 㘟	tseung
 䅛	tseung
 䆫	tseung
@@ -3898,66 +3898,66 @@
 𥦬	tseung
 𨫥	tseung
 𪂇	tseung
-墏	tsẻung
-搶	tsẻung
-摤	tsẻung
-磢	tsẻung
-腸	tsẻung	
-鋹	tsẻung
-䩨	tséung
-䵁	tséung
-倡	tséung	
-唱	tséung
-嗆	tséung	
-悵	tséung
-戧	tséung	
-昶	tséung	
-暢	tséung
-焻	tséung
-熗	tséung
-瑒	tséung
-誯	tséung
-蹌	tséung	
-蹡	tséung	
-韔	tséung
-鬯	tséung
-𣈱	tséung
-㘯	tsèung
-㙊	tsèung
-㟄	tsèung
-䔗	tsèung
-䠆	tsèung
-䯴	tsèung
-仧	tsèung
-仩	tsèung
-兏	tsèung
-場	tsèung
-塲	tsèung
-墻	tsèung
-嬙	tsèung
-庠	tsèung
-廧	tsèung
-戕	tsèung
-檣	tsèung
-爿	tsèung	
-牆	tsèung
-瓺	tsèung
-畼	tsèung
-祥	tsèung
-絴	tsèung
-羊	tsèung	
-翔	tsèung
-腸	tsèung
-膓	tsèung
-艢	tsèung
-萇	tsèung
-薔	tsèung
-蘠	tsèung
-詳	tsèung
-長	tsèung	
-镸	tsèung
-𡤑	tsèung
-𢒑	tsèung
+墏	tseủng
+搶	tseủng
+摤	tseủng
+磢	tseủng
+腸	tseủng	
+鋹	tseủng
+䩨	tseúng
+䵁	tseúng
+倡	tseúng	
+唱	tseúng
+嗆	tseúng	
+悵	tseúng
+戧	tseúng	
+昶	tseúng	
+暢	tseúng
+焻	tseúng
+熗	tseúng
+瑒	tseúng
+誯	tseúng
+蹌	tseúng	
+蹡	tseúng	
+韔	tseúng
+鬯	tseúng
+𣈱	tseúng
+㘯	tseùng
+㙊	tseùng
+㟄	tseùng
+䔗	tseùng
+䠆	tseùng
+䯴	tseùng
+仧	tseùng
+仩	tseùng
+兏	tseùng
+場	tseùng
+塲	tseùng
+墻	tseùng
+嬙	tseùng
+庠	tseùng
+廧	tseùng
+戕	tseùng
+檣	tseùng
+爿	tseùng	
+牆	tseùng
+瓺	tseùng
+畼	tseùng
+祥	tseùng
+絴	tseùng
+羊	tseùng	
+翔	tseùng
+腸	tseùng
+膓	tseùng
+艢	tseùng
+萇	tseùng
+薔	tseùng
+蘠	tseùng
+詳	tseùng
+長	tseùng	
+镸	tseùng
+𡤑	tseùng
+𢒑	tseùng
 𠻘	tsẻut
 啋	tsoi
 㥒	tsỏi
@@ -5858,24 +5858,24 @@
 𣳼	dèu
 𡃏	dẹu
 剁	deuk	
-㭬	déuk
-刴	déuk	
-剁	déuk
-剢	déuk
-啄	déuk
-啅	déuk
-噣	déuk
-孎	déuk	
-斀	déuk
-斮	déuk
-斲	déuk
-椓	déuk
-涿	déuk
-琢	déuk
-籗	déuk
-菿	déuk
-諑	déuk
-𣄽	déuk
+㭬	deúk
+刴	deúk	
+剁	deúk
+剢	deúk
+啄	deúk
+啅	deúk
+噣	deúk
+孎	deúk	
+斀	deúk
+斮	deúk
+斲	deúk
+椓	deúk
+涿	deúk
+琢	deúk
+籗	deúk
+菿	deúk
+諑	deúk
+𣄽	deúk
 啄	deung	
 𡁷	deung
 㭖	dọi
@@ -9376,14 +9376,14 @@
 啹	geu
 鋸	géu
 𢤹	gèu
-匷	géuk
-屩	géuk
-屫	géuk
-脚	géuk
-腳	géuk
-谻	géuk	
-踋	géuk
-蹻	géuk	
+匷	geúk
+屩	geúk
+屫	geúk
+脚	geúk
+腳	geúk
+谻	geúk	
+踋	geúk
+蹻	geúk	
 㳾	geung
 㹔	geung
 䕬	geung
@@ -9415,18 +9415,18 @@
 韁	geung
 𡟜	geung
 𦍑	geung
-䋌	gẻung
-蔃	gẻung
-勥	gẹung
-唴	gẹung
-弶	gẹung
-強	gẹung	
-强	gẹung	
-彊	gẹung	
-犟	gẹung
-糡	gẹung
-糨	gẹung
-𣚦	gẹung
+䋌	geủng
+蔃	geủng
+勥	geụng
+唴	geụng
+弶	geụng
+強	geụng	
+强	geụng	
+彊	geụng	
+犟	geụng
+糡	geụng
+糨	geụng
+𣚦	geụng
 㨟	goi
 㱾	goi
 䀭	goi
@@ -12339,39 +12339,39 @@
 香	heung
 鱜	heung
 麘	heung
-㗽	hẻung
-㬀	hẻung
-䊑	hẻung
-䖮	hẻung
-亨	hẻung	
-享	hẻung
-亯	hẻung
-响	hẻung
-嚮	hẻung	
-垧	hẻung
-恦	hẻung
-晌	hẻung
-晑	hẻung
-薌	hẻung	
-蠁	hẻung
-銄	hẻung
-響	hẻung
-餉	hẻung
-饗	hẻung
-饟	hẻung
-𩐿	hẻung
-䦳	héung
-向	héung
-嚮	héung
-姠	héung
-曏	héung
-珦	héung
-缿	héung
-萫	héung
-蠁	héung	
-鄉	héung	
-鄕	héung	
-𠨍	héung	
+㗽	heủng
+㬀	heủng
+䊑	heủng
+䖮	heủng
+亨	heủng	
+享	heủng
+亯	heủng
+响	heủng
+嚮	heủng	
+垧	heủng
+恦	heủng
+晌	heủng
+晑	heủng
+薌	heủng	
+蠁	heủng
+銄	heủng
+響	heủng
+餉	heủng
+饗	heủng
+饟	heủng
+𩐿	heủng
+䦳	heúng
+向	heúng
+嚮	heúng
+姠	heúng
+曏	heúng
+珦	heúng
+缿	heúng
+萫	heúng
+蠁	heúng	
+鄉	heúng	
+鄕	heúng	
+𠨍	heúng	
 㚊	hoi
 㝩	hoi
 㰧	hoi
@@ -14932,7 +14932,7 @@
 𪃳	ying
 呎	ying tsék	
 吋	ying tsuén	
-啢	ying lẻung
+啢	ying leủng
 𠺖	ying mẫu
 㢍	yỉng
 㲟	yỉng
@@ -15383,67 +15383,67 @@
 唷	yo
 喲	yo
 育	yo	
-瀹	yéuk
-箹	yéuk	
-約	yéuk
-葯	yéuk	
-躍	yéuk	
-㒢	yẹuk
-㜰	yẹuk
-㰛	yẹuk
-㵸	yẹuk
-㿑	yẹuk
-䋤	yẹuk
-䐞	yẹuk
-䖃	yẹuk
-䖈	yẹuk
-䖋	yẹuk
-䟑	yẹuk
-䠯	yẹuk
-䤀	yẹuk
-䨋	yẹuk
-䶳	yẹuk
-偌	yẹuk	
-叒	yẹuk
-婩	yẹuk
-婼	yẹuk	
-嵶	yẹuk
-弱	yẹuk
-扚	yẹuk	
-曰	yẹuk
-楉	yẹuk
-櫟	yẹuk
-汋	yẹuk	
-渃	yẹuk
-瀹	yẹuk	
-爇	yẹuk
-爚	yẹuk
-瘧	yẹuk
-硸	yẹuk
-礿	yẹuk
-禴	yẹuk
-箬	yẹuk
-篛	yẹuk
-籥	yẹuk
-籲	yẹuk	
-纅	yẹuk
-若	yẹuk
-葯	yẹuk
-蒻	yẹuk
-薬	yẹuk
-藥	yẹuk
-蘥	yẹuk
-虐	yẹuk
-謔	yẹuk
-躍	yẹuk
-鄀	yẹuk
-鈅	yẹuk
-鑰	yẹuk
-鰙	yẹuk
-鰯	yẹuk
-鶸	yẹuk
-鸙	yẹuk
-龠	yẹuk
+瀹	yeúk
+箹	yeúk	
+約	yeúk
+葯	yeúk	
+躍	yeúk	
+㒢	yeụk
+㜰	yeụk
+㰛	yeụk
+㵸	yeụk
+㿑	yeụk
+䋤	yeụk
+䐞	yeụk
+䖃	yeụk
+䖈	yeụk
+䖋	yeụk
+䟑	yeụk
+䠯	yeụk
+䤀	yeụk
+䨋	yeụk
+䶳	yeụk
+偌	yeụk	
+叒	yeụk
+婩	yeụk
+婼	yeụk	
+嵶	yeụk
+弱	yeụk
+扚	yeụk	
+曰	yeụk
+楉	yeụk
+櫟	yeụk
+汋	yeụk	
+渃	yeụk
+瀹	yeụk	
+爇	yeụk
+爚	yeụk
+瘧	yeụk
+硸	yeụk
+礿	yeụk
+禴	yeụk
+箬	yeụk
+篛	yeụk
+籥	yeụk
+籲	yeụk	
+纅	yeụk
+若	yeụk
+葯	yeụk
+蒻	yeụk
+薬	yeụk
+藥	yeụk
+蘥	yeụk
+虐	yeụk
+謔	yeụk
+躍	yeụk
+鄀	yeụk
+鈅	yeụk
+鑰	yeụk
+鰙	yeụk
+鰯	yeụk
+鶸	yeụk
+鸙	yeụk
+龠	yeụk
 㡕	yeung
 䄃	yeung
 䘧	yeung
@@ -15465,138 +15465,138 @@
 鞅	yeung
 鴦	yeung
 𧲱	yeung
-䇦	yẻung
-䒋	yẻung
-姎	yẻung	
-岟	yẻung
-怏	yẻung	
-抰	yẻung
-映	yẻung	
-柍	yẻung	
-樣	yẻung	
-炴	yẻung
-紻	yẻung
-鞅	yẻung	
-駚	yẻung
-㿮	yéung
-䬬	yéung
-怏	yéung	
-詇	yéung
-鞅	yéung	
-㦹	yèung
-㬕	yèung
-㳱	yèung
-䁑	yèung
-䉴	yèung
-䬗	yèung
-䵮	yèung
-佯	yèung
-儴	yèung
-勷	yèung
-垟	yèung
-崵	yèung	
-徉	yèung
-揚	yèung
-攘	yèung
-敭	yèung
-昜	yèung
-暘	yèung
-楊	yèung
-様	yèung
-氜	yèung
-氱	yèung
-洋	yèung
-湯	yèung	
-瀼	yèung
-烊	yèung
-煬	yèung
-獽	yèung
-珜	yèung
-瑒	yèung	
-痒	yèung
-瘍	yèung
-眻	yèung
-禓	yèung
-禳	yèung
-穣	yèung
-穰	yèung
-羊	yèung
-羏	yèung
-蘘	yèung
-蛘	yèung
-蝆	yèung
-詳	yèung	
-諹	yèung
-躟	yèung
-輰	yèung
-鍚	yèung
-鐊	yèung
-阦	yèung
-陽	yèung
-霷	yèung
-颺	yèung
-鬤	yèung
-鰑	yèung
-鴹	yèung
-鸉	yèung
-𤋁	yèung
-𦭵	yèung
-𧟄	yèung
-㔦	yẽung
-䍩	yẽung
-䑆	yẽung
-䑋	yẽung
-仰	yẽung
-佒	yẽung
-卬	yẽung
-嚷	yẽung	
-坱	yẽung
-壤	yẽung	
-懩	yẽung
-攁	yẽung
-攘	yẽung	
-氧	yẽung
-瀁	yẽung
-爙	yẽung
-痒	yẽung	
-癢	yẽung
-礢	yẽung
-穰	yẽung	
-羻	yẽung
-蛘	yẽung	
-養	yẽung
-鬤	yẽung	
-𡏆	yẽung
-𡒶	yẽung
-𣞼	yẽung
-𨦪	yẽung
-㨾	yẹung
-㺊	yẹung
-䬺	yẹung
-䭐	yẹung
-䭥	yẹung
-嚷	yẹung
-圵	yẹung
-壌	yẹung
-壤	yẹung
-恙	yẹung
-懹	yẹung
-攘	yẹung	
-樣	yẹung
-漾	yẹung
-瀁	yẹung	
-瀼	yẹung	
-烊	yẹung	
-煬	yẹung	
-穰	yẹung	
-羕	yẹung
-蠰	yẹung
-譲	yẹung
-讓	yẹung
-醸	yẹung
-釀	yẹung
-養	yẹung	
-𧁒	yẹung
+䇦	yeủng
+䒋	yeủng
+姎	yeủng	
+岟	yeủng
+怏	yeủng	
+抰	yeủng
+映	yeủng	
+柍	yeủng	
+樣	yeủng	
+炴	yeủng
+紻	yeủng
+鞅	yeủng	
+駚	yeủng
+㿮	yeúng
+䬬	yeúng
+怏	yeúng	
+詇	yeúng
+鞅	yeúng	
+㦹	yeùng
+㬕	yeùng
+㳱	yeùng
+䁑	yeùng
+䉴	yeùng
+䬗	yeùng
+䵮	yeùng
+佯	yeùng
+儴	yeùng
+勷	yeùng
+垟	yeùng
+崵	yeùng	
+徉	yeùng
+揚	yeùng
+攘	yeùng
+敭	yeùng
+昜	yeùng
+暘	yeùng
+楊	yeùng
+様	yeùng
+氜	yeùng
+氱	yeùng
+洋	yeùng
+湯	yeùng	
+瀼	yeùng
+烊	yeùng
+煬	yeùng
+獽	yeùng
+珜	yeùng
+瑒	yeùng	
+痒	yeùng
+瘍	yeùng
+眻	yeùng
+禓	yeùng
+禳	yeùng
+穣	yeùng
+穰	yeùng
+羊	yeùng
+羏	yeùng
+蘘	yeùng
+蛘	yeùng
+蝆	yeùng
+詳	yeùng	
+諹	yeùng
+躟	yeùng
+輰	yeùng
+鍚	yeùng
+鐊	yeùng
+阦	yeùng
+陽	yeùng
+霷	yeùng
+颺	yeùng
+鬤	yeùng
+鰑	yeùng
+鴹	yeùng
+鸉	yeùng
+𤋁	yeùng
+𦭵	yeùng
+𧟄	yeùng
+㔦	yeũng
+䍩	yeũng
+䑆	yeũng
+䑋	yeũng
+仰	yeũng
+佒	yeũng
+卬	yeũng
+嚷	yeũng	
+坱	yeũng
+壤	yeũng	
+懩	yeũng
+攁	yeũng
+攘	yeũng	
+氧	yeũng
+瀁	yeũng
+爙	yeũng
+痒	yeũng	
+癢	yeũng
+礢	yeũng
+穰	yeũng	
+羻	yeũng
+蛘	yeũng	
+養	yeũng
+鬤	yeũng	
+𡏆	yeũng
+𡒶	yeũng
+𣞼	yeũng
+𨦪	yeũng
+㨾	yeụng
+㺊	yeụng
+䬺	yeụng
+䭐	yeụng
+䭥	yeụng
+嚷	yeụng
+圵	yeụng
+壌	yeụng
+壤	yeụng
+恙	yeụng
+懹	yeụng
+攘	yeụng	
+樣	yeụng
+漾	yeụng
+瀁	yeụng	
+瀼	yeụng	
+烊	yeụng	
+煬	yeụng	
+穰	yeụng	
+羕	yeụng
+蠰	yeụng
+譲	yeụng
+讓	yeụng
+醸	yeụng
+釀	yeụng
+養	yeụng	
+𧁒	yeụng
 㓇	yuk
 㤢	yuk
 㦽	yuk
@@ -17485,47 +17485,47 @@
 啹	keu	
 瘸	kèu	
 翗	kèu
-㑢	kéuk
-㕁	kéuk
-㷾	kéuk
-㾡	kéuk
-却	kéuk
-卻	kéuk
-噱	kéuk	
-𨚫	kéuk
-㘌	kẹuk
-䐘	kẹuk
-䖼	kẹuk
-噱	kẹuk
-臄	kẹuk	
-蹻	kẹuk	
-醵	kẹuk	
-㛨	kẻung
-蔃	kẻung	
-強	kéung	
-彊	kéung	
-㩖	kèung
-䃨	kèung
-嵹	kèung
-強	kèung
-强	kèung
-彊	kèung	
-漒	kèung
-䥒	kẽung
-弜	kẽung
-弶	kẽung	
-強	kẽung	
-强	kẽung	
-彊	kẽung	
-摾	kẽung
-滰	kẽung
-繈	kẽung
-繦	kẽung
-羥	kẽung
-膙	kẽung	
-襁	kẽung
-謽	kẽung
-鏹	kẽung
+㑢	keúk
+㕁	keúk
+㷾	keúk
+㾡	keúk
+却	keúk
+卻	keúk
+噱	keúk	
+𨚫	keúk
+㘌	keụk
+䐘	keụk
+䖼	keụk
+噱	keụk
+臄	keụk	
+蹻	keụk	
+醵	keụk	
+㛨	keủng
+蔃	keủng	
+強	keúng	
+彊	keúng	
+㩖	keùng
+䃨	keùng
+嵹	keùng
+強	keùng
+强	keùng
+彊	keùng	
+漒	keùng
+䥒	keũng
+弜	keũng
+弶	keũng	
+強	keũng	
+强	keũng	
+彊	keũng	
+摾	keũng
+滰	keũng
+繈	keũng
+繦	keũng
+羥	keũng
+膙	keũng	
+襁	keũng
+謽	keũng
+鏹	keũng
 嘅	kỏi	
 慨	kỏi	
 㪡	kói
@@ -19994,86 +19994,86 @@
 𠼱	lẻu	
 𢶤	lẻu
 𦧲	lẻu	
-㑼	lẹuk
-㗉	lẹuk
-㨼	lẹuk
-䂮	lẹuk
-䅫	lẹuk
-䌎	lẹuk
-䛚	lẹuk
-圙	lẹuk
-掠	lẹuk
-撂	lẹuk	
-擽	lẹuk	
-略	lẹuk
-畧	lẹuk
-稤	lẹuk
-𠼟	lẹuk
-両	lẻung
-兩	lẻung	
-啢	lẻung	
-㹁	lèung
-䝶	lèung
-䣼	lèung
-俍	lèung
-墚	lèung
-斏	lèung
-梁	lèung
-椋	lèung
-樑	lèung
-涼	lèung
-簗	lèung
-粮	lèung
-粱	lèung
-糧	lèung
-綡	lèung
-羪	lèung
-良	lèung
-莨	lèung
-蜋	lèung
-諒	lèung	
-踉	lèung	
-輬	lèung
-量	lèung	
-駺	lèung
-𣸑	lèung
-𨫟	lèung
-𩞯	lèung
-㒳	lẽung
-㔝	lẽung
-䓣	lẽung
-䠃	lẽung
-䩫	lẽung
-倆	lẽung
-兩	lẽung
-啢	lẽung	
-掚	lẽung
-緉	lẽung
-脼	lẽung
-蜽	lẽung
-裲	lẽung
-襔	lẽung
-魎	lẽung
-㾗	lẹung
-䀶	lẹung
-䁁	lẹung
-亮	lẹung
-倞	lẹung	
-兩	lẹung	
-哴	lẹung
-喨	lẹung
-悢	lẹung
-惊	lẹung	
-涼	lẹung	
-湸	lẹung
-緉	lẹung	
-諒	lẹung
-踉	lẹung
-輌	lẹung
-輛	lẹung
-量	lẹung	
-鍄	lẹung
-𤦻	lẹung
+㑼	leụk
+㗉	leụk
+㨼	leụk
+䂮	leụk
+䅫	leụk
+䌎	leụk
+䛚	leụk
+圙	leụk
+掠	leụk
+撂	leụk	
+擽	leụk	
+略	leụk
+畧	leụk
+稤	leụk
+𠼟	leụk
+両	leủng
+兩	leủng	
+啢	leủng	
+㹁	leùng
+䝶	leùng
+䣼	leùng
+俍	leùng
+墚	leùng
+斏	leùng
+梁	leùng
+椋	leùng
+樑	leùng
+涼	leùng
+簗	leùng
+粮	leùng
+粱	leùng
+糧	leùng
+綡	leùng
+羪	leùng
+良	leùng
+莨	leùng
+蜋	leùng
+諒	leùng	
+踉	leùng	
+輬	leùng
+量	leùng	
+駺	leùng
+𣸑	leùng
+𨫟	leùng
+𩞯	leùng
+㒳	leũng
+㔝	leũng
+䓣	leũng
+䠃	leũng
+䩫	leũng
+倆	leũng
+兩	leũng
+啢	leũng	
+掚	leũng
+緉	leũng
+脼	leũng
+蜽	leũng
+裲	leũng
+襔	leũng
+魎	leũng
+㾗	leụng
+䀶	leụng
+䁁	leụng
+亮	leụng
+倞	leụng	
+兩	leụng	
+哴	leụng
+喨	leụng
+悢	leụng
+惊	leụng	
+涼	leụng	
+湸	leụng
+緉	leụng	
+諒	leụng
+踉	leụng
+輌	leụng
+輛	leụng
+量	leụng	
+鍄	leụng
+𤦻	leụng
 㚓	lòi
 䅘	lòi
 䧒	lòi
@@ -23665,11 +23665,11 @@
 糯	nọ
 那	nọ	
 𥻟	nọ
-蹃	nẹuk
-娘	nèung
-嬢	nèung
-孃	nèung
-䖆	nẹung
+蹃	neụk
+娘	neùng
+嬢	neùng
+孃	neùng
+䖆	neụng
 㾍	nòi
 䯮	nòi
 熋	nòi
@@ -27324,15 +27324,15 @@
 瀡	sèu	
 𠿬	sèu
 𡄽	sèu
-䁻	séuk
-削	séuk
-勺	séuk	
-杓	séuk	
-燿	séuk	
-爍	séuk
-獡	séuk	
-鑠	séuk
-𠸑	séuk
+䁻	seúk
+削	seúk
+勺	seúk	
+杓	seúk	
+燿	seúk	
+爍	seúk
+獡	seúk	
+鑠	seúk
+𠸑	seúk
 㐮	seung
 㕠	seung
 㜀	seung
@@ -27387,44 +27387,44 @@
 鸘	seung
 𤳈	seung
 𨫢	seung
-想	sẻung
-扄	sẻung
-相	sẻung	
-賞	sẻung
-贘	sẻung
-鑜	sẻung
-鮝	sẻung
-鯗	sẻung
-鱶	sẻung
-㦼	séung
-䉘	séung
-相	séung	
-㦂	sèung
-倘	sèung	
-償	sèung
-嘗	sèung
-嚐	sèung
-嫦	sèung
-常	sèung
-徜	sèung
-瑺	sèung
-甞	sèung
-裳	sèung
-鋿	sèung
-鏛	sèung
-鱨	sèung
-龦	sèung
-𡣖	sèung
-𣙟	sèung
-𣻸	sèung
-上	sẽung	
-緔	sẽung
-鞝	sẽung
-㫾	sẹung
-丄	sẹung
-上	sẹung	
-尙	sẹung
-尚	sẹung
+想	seủng
+扄	seủng
+相	seủng	
+賞	seủng
+贘	seủng
+鑜	seủng
+鮝	seủng
+鯗	seủng
+鱶	seủng
+㦼	seúng
+䉘	seúng
+相	seúng	
+㦂	seùng
+倘	seùng	
+償	seùng
+嘗	seùng
+嚐	seùng
+嫦	seùng
+常	seùng
+徜	seùng
+瑺	seùng
+甞	seùng
+裳	seùng
+鋿	seùng
+鏛	seùng
+鱨	seùng
+龦	seùng
+𡣖	seùng
+𣙟	seùng
+𣻸	seùng
+上	seũng	
+緔	seũng
+鞝	seũng
+㫾	seụng
+丄	seụng
+上	seụng	
+尙	seụng
+尚	seụng
 䚡	soi
 䰄	soi
 偲	soi	
@@ -33424,78 +33424,78 @@
 朘	cheu	
 脧	cheu	
 雀	chẻuk	
-㒂	chéuk
-㓸	chéuk
-㣿	chéuk
-㩱	chéuk
-㹱	chéuk
-䅵	chéuk
-䧿	chéuk
-䮓	chéuk
-䲵	chéuk
-䶂	chéuk
-倬	chéuk	
-劅	chéuk
-勺	chéuk
-卓	chéuk	
-嚼	chéuk
-圴	chéuk
-妁	chéuk
-妰	chéuk
-彴	chéuk
-戳	chéuk	
-撯	chéuk
-擆	chéuk
-斀	chéuk	
-斫	chéuk
-斮	chéuk	
-斱	chéuk
-斲	chéuk	
-斵	chéuk
-晫	chéuk
-杓	chéuk	
-桌	chéuk	
-棹	chéuk	
-槕	chéuk
-櫡	chéuk
-汋	chéuk	
-淖	chéuk	
-灼	chéuk	
-烵	chéuk
-焯	chéuk
-焳	chéuk
-熦	chéuk
-爑	chéuk
-爝	chéuk	
-爵	chéuk
-犳	chéuk
-琸	chéuk
-皭	chéuk	
-着	chéuk	
-硺	chéuk
-禚	chéuk
-穱	chéuk
-籱	chéuk
-繳	chéuk	
-芍	chéuk	
-著	chéuk	
-謶	chéuk	
-酌	chéuk
-鐯	chéuk
-雀	chéuk
-鵲	chéuk	
-𥫩	chéuk
-𥼚	chéuk
-𨧧	chéuk
-𨫠	chéuk
-𨰜	chéuk
-嚼	chẹuk	
-爝	chẹuk	
-皭	chẹuk	
-着	chẹuk
-著	chẹuk	
-鐯	chẹuk	
-𤏲	chẹuk
+㒂	cheúk
+㓸	cheúk
+㣿	cheúk
+㩱	cheúk
+㹱	cheúk
+䅵	cheúk
+䧿	cheúk
+䮓	cheúk
+䲵	cheúk
+䶂	cheúk
+倬	cheúk	
+劅	cheúk
+勺	cheúk
+卓	cheúk	
+嚼	cheúk
+圴	cheúk
+妁	cheúk
+妰	cheúk
+彴	cheúk
+戳	cheúk	
+撯	cheúk
+擆	cheúk
+斀	cheúk	
+斫	cheúk
+斮	cheúk	
+斱	cheúk
+斲	cheúk	
+斵	cheúk
+晫	cheúk
+杓	cheúk	
+桌	cheúk	
+棹	cheúk	
+槕	cheúk
+櫡	cheúk
+汋	cheúk	
+淖	cheúk	
+灼	cheúk	
+烵	cheúk
+焯	cheúk
+焳	cheúk
+熦	cheúk
+爑	cheúk
+爝	cheúk	
+爵	cheúk
+犳	cheúk
+琸	cheúk
+皭	cheúk	
+着	cheúk	
+硺	cheúk
+禚	cheúk
+穱	cheúk
+籱	cheúk
+繳	cheúk	
+芍	cheúk	
+著	cheúk	
+謶	cheúk	
+酌	cheúk
+鐯	cheúk
+雀	cheúk
+鵲	cheúk	
+𥫩	cheúk
+𥼚	cheúk
+𨧧	cheúk
+𨫠	cheúk
+𨰜	cheúk
+嚼	cheụk	
+爝	cheụk	
+皭	cheụk	
+着	cheụk
+著	cheụk	
+鐯	cheụk	
+𤏲	cheụk
 㯑	cheung
 䊢	cheung
 䛫	cheung
@@ -33533,67 +33533,67 @@
 𥕞	cheung
 𥪮	cheung
 𪋟	cheung
-㢡	chẻung
-㯍	chẻung
-䉃	chẻung
-䒂	chẻung
-仉	chẻung
-奨	chẻung
-奬	chẻung
-幥	chẻung
-掌	chẻung
-槳	chẻung
-涱	chẻung
-漲	chẻung	
-獎	chẻung
-礃	chẻung
-膙	chẻung	
-蔣	chẻung
-鐣	chẻung
-長	chẻung	
-鞝	chẻung	
-𣛟	chẻung
-㙣	chéung
-㢓	chéung
-仗	chéung
-墇	chéung	
-將	chéung	
-嶂	chéung
-帳	chéung
-幛	chéung
-張	chéung	
-弶	chéung	
-悵	chéung	
-漲	chéung
-痮	chéung
-瘬	chéung
-瘴	chéung
-瞕	chéung
-脹	chéung
-賬	chéung
-醤	chéung
-醬	chéung
-障	chéung
-㽴	chẹung
-䞪	chẹung
-䴂	chẹung
-丈	chẹung
-仗	chẹung	
-像	chẹung
-勨	chẹung
-匞	chẹung
-匠	chẹung
-嶑	chẹung
-扙	chẹung
-杖	chẹung
-橡	chẹung
-粀	chẹung
-蟓	chẹung
-襐	chẹung
-象	chẹung
-鐌	chẹung
-長	chẹung	
-鱌	chẹung
+㢡	cheủng
+㯍	cheủng
+䉃	cheủng
+䒂	cheủng
+仉	cheủng
+奨	cheủng
+奬	cheủng
+幥	cheủng
+掌	cheủng
+槳	cheủng
+涱	cheủng
+漲	cheủng	
+獎	cheủng
+礃	cheủng
+膙	cheủng	
+蔣	cheủng
+鐣	cheủng
+長	cheủng	
+鞝	cheủng	
+𣛟	cheủng
+㙣	cheúng
+㢓	cheúng
+仗	cheúng
+墇	cheúng	
+將	cheúng	
+嶂	cheúng
+帳	cheúng
+幛	cheúng
+張	cheúng	
+弶	cheúng	
+悵	cheúng	
+漲	cheúng
+痮	cheúng
+瘬	cheúng
+瘴	cheúng
+瞕	cheúng
+脹	cheúng
+賬	cheúng
+醤	cheúng
+醬	cheúng
+障	cheúng
+㽴	cheụng
+䞪	cheụng
+䴂	cheụng
+丈	cheụng
+仗	cheụng	
+像	cheụng
+勨	cheụng
+匞	cheụng
+匠	cheụng
+嶑	cheụng
+扙	cheụng
+杖	cheụng
+橡	cheụng
+粀	cheụng
+蟓	cheụng
+襐	cheụng
+象	cheụng
+鐌	cheụng
+長	cheụng	
+鱌	cheụng
 𠻘	chẻut	
 𠻘	chẹut	
 㘽	choi
