粵語國語字Cantonese Chu Quoc Ngu

--- a/quocnguytihoisanva.dict.yaml
+++ b/quocnguytihoisanva.dict.yaml
@@ -2083,533 +2083,533 @@
 鰈	iệp	
 㲲	iệp	
 喋	iêp	
-化	fã	
-化	fá	
-花	fá	
-芲	fá	
-𠆧	fá	
-傀	fái	
-噲	fái	
-塊	fái	
-快	fái	
-筷	fái	
-駃	fái	
-撥	fac	
-幡	fãn	
-瓣	fãn	
-畈	fãn	
-販	fãn	
-凡	fàn	
-帆	fàn	
-梵	fàn	
-樊	fàn	
-煩	fàn	
-燔	fàn	
-璠	fàn	
-礬	fàn	
-笲	fàn	
-籓	fàn	
-籵	fàn	
-緐	fàn	
-繁	fàn	
-膰	fàn	
-蕃	fàn	
-藩	fàn	
-蘩	fàn	
-襎	fàn	
-蹯	fàn	
-軬	fàn	
-釩	fàn	
-颿	fàn	
-㠶	fàn	
-樊	fạn	
-泛	fạn	
-犯	fạn	
-範	fạn	
-范	fạn	
-飯	fạn	
-幡	fán	
-番	fán	
-繙	fán	
-翻	fán	
-蕃	fán	
-返	fán	
-飜	fán	
-反	fản	
-吰	fành	
-宏	fành	
-弘	fành	
-汯	fành	
-泓	fành	
-竑	fành	
-竤	fành	
-閎	fành	
-乏	fạt	
-伐	fạt	
-垡	fạt	
-栰	fạt	
-筏	fạt	
-罰	fạt	
-罸	fạt	
-閥	fạt	
-發	fát	
-醱	fát	
-法	fat	
-琺	fat	
-發	fat	
-砝	fat	
-髪	fat	
-髮	fat	
-啡	fẽ	
-啡	fẻ	
-桴	fầu	
-浮	fầu	
-涪	fầu	
-罘	fầu	
-芣	fầu	
-蜉	fầu	
-齁	fầu	
-埠	fậu	
-缶	fậu	
-阜	fậu	
-否	fẩu	
-飛	fĩ	
-淝	fì	
-肥	fì	
-蜰	fì	
-裴	fì	
-僡	fị	
-吠	fị	
-喙	fị	
-彗	fị	
-恚	fị	
-惠	fị	
-慧	fị	
-憓	fị	
-槥	fị	
-潓	fị	
-篲	fị	
-蔧	fị	
-蕙	fị	
-蟪	fị	
-㱱	fị	
-剕	fí	
-剕	fí	
-妃	fí	
-徽	fí	
-怫	fí	
-扉	fí	
-揮	fí	
-撝	fí	
-暉	fí	
-沸	fí	
-煇	fí	
-狒	fí	
-琿	fí	
-緋	fí	
-翡	fí	
-翬	fí	
-肺	fí	
-腓	fí	
-芾	fí	
-菲	fí	
-蜚	fí	
-褘	fí	
-諱	fí	
-費	fí	
-輝	fí	
-鐨	fí	
-霏	fí	
-非	fí	
-飛	fí	
-飝	fí	
-鯡	fí	
-麾	fí	
-䬠	fí	
-𧓊	fí	
-匪	fỉ	
-卉	fỉ	
-廢	fỉ	
-悱	fỉ	
-斐	fỉ	
-榧	fỉ	
-毀	fỉ	
-燬	fỉ	
-痱	fỉ	
-篚	fỉ	
-翡	fỉ	
-菲	fỉ	
-虺	fỉ	
-誹	fỉ	
-隳	fỉ	
-䨾	fỉ	
-匼	fó	
-堁	fó	
-戈	fó	
-科	fó	
-稞	fó	
-蝌	fó	
-課	fó	
-貨	fó	
-踝	fó	
-錁	fó	
-騍	fó	
-髁	fó	
-伙	fỏ	
-夥	fỏ	
-棵	fỏ	
-火	fỏ	
-灬	fỏ	
-鈥	fỏ	
-顆	fỏ	
-咍	fòi	
-㾂	fòi	
-傀	fói	
-咴	fói	
-喹	fói	
-奎	fói	
-恢	fói	
-悝	fói	
-灰	fói	
-盔	fói	
-虺	fói	
-蝰	fói	
-詼	fói	
-魁	fói	
-䠑	fói	
-悔	fỏi	
-晦	fỏi	
-誨	fỏi	
-縛	fọc	
-霍	foc	
-靃	foc	
-喚	fọn	
-奐	fọn	
-渙	fọn	
-煥	fọn	
-瘓	fọn	
-緩	fọn	
-寛	fón	
-寬	fón	
-歡	fón	
-獾	fón	
-貛	fón	
-髖	fón	
-䝔	fón	
-欵	fỏn	
-款	fỏn	
-浣	fỏn	
-澣	fỏn	
-皖	fỏn	
-盥	fỏn	
-睆	fỏn	
-莞	fỏn	
-詪	fỏn	
-房	fõng	
-妨	fòng	
-防	fòng	
-魴	fòng	
-匚	fóng	
-塃	fóng	
-慌	fóng	
-放	fóng	
-方	fóng	
-枋	fóng	
-肓	fóng	
-芳	fóng	
-荒	fóng	
-蚄	fóng	
-謊	fóng	
-邡	fóng	
-鄺	fóng	
-鈁	fóng	
-仿	fỏng	
-倣	fỏng	
-坊	fỏng	
-幌	fỏng	
-彷	fỏng	
-怳	fỏng	
-恍	fỏng	
-昉	fỏng	
-晃	fỏng	
-晄	fỏng	
-曠	fỏng	
-枋	fỏng	
-況	fỏng	
-皝	fỏng	
-皩	fỏng	
-眆	fỏng	
-眪	fỏng	
-紡	fỏng	
-肪	fỏng	
-舫	fỏng	
-訪	fỏng	
-貺	fỏng	
-蛞	fót	
-闊	fót	
-呼	fũ	
-婦	fũ	
-扶	fũ	
-絝	fũ	
-袴	fũ	
-褲	fũ	
-乎	fù	
-俘	fù	
-夫	fù	
-孚	fù	
-孵	fù	
-扶	fù	
-枎	fù	
-桴	fù	
-烀	fù	
-稃	fù	
-符	fù	
-罦	fù	
-芙	fù	
-苻	fù	
-莩	fù	
-虖	fù	
-蚨	fù	
-郛	fù	
-鄜	fù	
-鈇	fù	
-鳧	fù	
-付	fụ	
-傅	fụ	
-怙	fụ	
-戶	fụ	
-戸	fụ	
-扈	fụ	
-敷	fụ	
-柎	fụ	
-滬	fụ	
-父	fụ	
-祜	fụ	
-腐	fụ	
-訃	fụ	
-負	fụ	
-賻	fụ	
-輔	fụ	
-鄠	fụ	
-附	fụ	
-駙	fụ	
-鮒	fụ	
-仆	fú	
-伕	fú	
-副	fú	
-呋	fú	
-呼	fú	
-咐	fú	
-唿	fú	
-夫	fú	
-富	fú	
-庫	fú	
-戲	fú	
-戽	fú	
-枎	fú	
-柎	fú	
-滹	fú	
-膚	fú	
-虖	fú	
-賦	fú	
-赴	fú	
-趺	fú	
-跗	fú	
-軤	fú	
-麩	fú	
-乕	fủ	
-俛	fủ	
-俯	fủ	
-俿	fủ	
-唬	fủ	
-府	fủ	
-拊	fủ	
-撫	fủ	
-斧	fủ	
-柎	fủ	
-楛	fủ	
-滏	fủ	
-滸	fủ	
-父	fủ	
-狜	fủ	
-琥	fủ	
-甫	fủ	
-盙	fủ	
-簠	fủ	
-脯	fủ	
-腑	fủ	
-苦	fủ	
-虍	fủ	
-虎	fủ	
-虝	fủ	
-釜	fủ	
-頫	fủ	
-黼	fủ	
-䯽	fủ	
-𩭍	fủ	
-伏	fùc	
-伏	fục	
-匐	fục	
-宓	fục	
-幞	fục	
-復	fục	
-斛	fục	
-服	fục	
-栿	fục	
-洑	fục	
-絥	fục	
-茯	fục	
-菔	fục	
-袱	fục	
-襆	fục	
-鴔	fục	
-𩢰	fục	
-幅	fuc	
-復	fuc	
-福	fuc	
-腹	fuc	
-蝠	fuc	
-蝮	fuc	
-複	fuc	
-覆	fuc	
-輻	fuc	
-馥	fuc	
-鰒	fuc	
-僨	foãn	
-奮	foãn	
-忿	foãn	
-憤	foãn	
-瀵	foãn	
-糞	foãn	
-鱝	foãn	
-垣	foàn	
-墳	foàn	
-桓	foàn	
-汾	foàn	
-洹	foàn	
-濆	foàn	
-焚	foàn	
-萑	foàn	
-蚠	foàn	
-蚡	foàn	
-豶	foàn	
-賁	foàn	
-鼢	foàn	
-份	foạn	
-分	foạn	
-坌	foạn	
-分	foán	
-勛	foán	
-勳	foán	
-吩	foán	
-塤	foán	
-壎	foán	
-婚	foán	
-惛	foán	
-昏	foán	
-曛	foán	
-棼	foán	
-氛	foán	
-涽	foán	
-湣	foán	
-煇	foán	
-熏	foán	
-燻	foán	
-獯	foán	
-玢	foán	
-瞓	foán	
-窨	foán	
-糞	foán	
-紛	foán	
-芬	foán	
-葷	foán	
-薰	foán	
-訓	foán	
-酚	foán	
-醺	foán	
-閽	foán	
-䎜	foán	
-粉	foản	
-摓	fùng	
-渢	fùng	
-漨	fùng	
-縫	fùng	
-艂	fùng	
-菶	fùng	
-逢	fùng	
-馮	fùng	
-𠗦	fùng	
-塳	fụng	
-奉	fụng	
-甮	fụng	
-鳳	fụng	
-仹	fúng	
-夆	fúng	
-妦	fúng	
-封	fúng	
-峯	fúng	
-峰	fúng	
-捀	fúng	
-楓	fúng	
-灃	fúng	
-烽	fúng	
-瘋	fúng	
-碸	fúng	
-莑	fúng	
-葑	fúng	
-蘴	fúng	
-蜂	fúng	
-豊	fúng	
-豐	fúng	
-酆	fúng	
-鋒	fúng	
-鎽	fúng	
-鏠	fúng	
-風	fúng	
-麷	fúng	
-㛔	fúng	
-㷭	fúng	
-𡊋	fúng	
-𧯮	fúng	
-俸	fủng	
-唪	fủng	
-捀	fủng	
-諷	fủng	
-賵	fủng	
-䩬	fủng	
-忽	fùt	
-佛	fụt	
-怫	fụt	
-㧾	fút	
-佛	fut	
-唿	fut	
-囫	fut	
-堀	fut	
-弗	fut	
-忽	fut	
-怫	fut	
-惚	fut	
-拂	fut	
-氟	fut	
-淴	fut	
-矻	fut	
-砩	fut	
-祓	fut	
-窟	fut	
-笏	fut	
-笰	fut	
-紱	fut	
-紼	fut	
-芾	fut	
-茀	fut	
-鍃	fut	
-韍	fut	
-鮄	fut	
-黻	fut	
-㧾	fut	
-䀟	fut	
-𥄱	fut	
-𦁕	fut	
+化	phã	
+化	phá	
+花	phá	
+芲	phá	
+𠆧	phá	
+傀	phái	
+噲	phái	
+塊	phái	
+快	phái	
+筷	phái	
+駃	phái	
+撥	phac	
+幡	phãn	
+瓣	phãn	
+畈	phãn	
+販	phãn	
+凡	phàn	
+帆	phàn	
+梵	phàn	
+樊	phàn	
+煩	phàn	
+燔	phàn	
+璠	phàn	
+礬	phàn	
+笲	phàn	
+籓	phàn	
+籵	phàn	
+緐	phàn	
+繁	phàn	
+膰	phàn	
+蕃	phàn	
+藩	phàn	
+蘩	phàn	
+襎	phàn	
+蹯	phàn	
+軬	phàn	
+釩	phàn	
+颿	phàn	
+㠶	phàn	
+樊	phạn	
+泛	phạn	
+犯	phạn	
+範	phạn	
+范	phạn	
+飯	phạn	
+幡	phán	
+番	phán	
+繙	phán	
+翻	phán	
+蕃	phán	
+返	phán	
+飜	phán	
+反	phản	
+吰	phành	
+宏	phành	
+弘	phành	
+汯	phành	
+泓	phành	
+竑	phành	
+竤	phành	
+閎	phành	
+乏	phạt	
+伐	phạt	
+垡	phạt	
+栰	phạt	
+筏	phạt	
+罰	phạt	
+罸	phạt	
+閥	phạt	
+發	phát	
+醱	phát	
+法	phat	
+琺	phat	
+發	phat	
+砝	phat	
+髪	phat	
+髮	phat	
+啡	phẽ	
+啡	phẻ	
+桴	phầu	
+浮	phầu	
+涪	phầu	
+罘	phầu	
+芣	phầu	
+蜉	phầu	
+齁	phầu	
+埠	phậu	
+缶	phậu	
+阜	phậu	
+否	phẩu	
+飛	phĩ	
+淝	phì	
+肥	phì	
+蜰	phì	
+裴	phì	
+僡	phị	
+吠	phị	
+喙	phị	
+彗	phị	
+恚	phị	
+惠	phị	
+慧	phị	
+憓	phị	
+槥	phị	
+潓	phị	
+篲	phị	
+蔧	phị	
+蕙	phị	
+蟪	phị	
+㱱	phị	
+剕	phí	
+剕	phí	
+妃	phí	
+徽	phí	
+怫	phí	
+扉	phí	
+揮	phí	
+撝	phí	
+暉	phí	
+沸	phí	
+煇	phí	
+狒	phí	
+琿	phí	
+緋	phí	
+翡	phí	
+翬	phí	
+肺	phí	
+腓	phí	
+芾	phí	
+菲	phí	
+蜚	phí	
+褘	phí	
+諱	phí	
+費	phí	
+輝	phí	
+鐨	phí	
+霏	phí	
+非	phí	
+飛	phí	
+飝	phí	
+鯡	phí	
+麾	phí	
+䬠	phí	
+𧓊	phí	
+匪	phỉ	
+卉	phỉ	
+廢	phỉ	
+悱	phỉ	
+斐	phỉ	
+榧	phỉ	
+毀	phỉ	
+燬	phỉ	
+痱	phỉ	
+篚	phỉ	
+翡	phỉ	
+菲	phỉ	
+虺	phỉ	
+誹	phỉ	
+隳	phỉ	
+䨾	phỉ	
+匼	phó	
+堁	phó	
+戈	phó	
+科	phó	
+稞	phó	
+蝌	phó	
+課	phó	
+貨	phó	
+踝	phó	
+錁	phó	
+騍	phó	
+髁	phó	
+伙	phỏ	
+夥	phỏ	
+棵	phỏ	
+火	phỏ	
+灬	phỏ	
+鈥	phỏ	
+顆	phỏ	
+咍	phòi	
+㾂	phòi	
+傀	phói	
+咴	phói	
+喹	phói	
+奎	phói	
+恢	phói	
+悝	phói	
+灰	phói	
+盔	phói	
+虺	phói	
+蝰	phói	
+詼	phói	
+魁	phói	
+䠑	phói	
+悔	phỏi	
+晦	phỏi	
+誨	phỏi	
+縛	phọc	
+霍	phoc	
+靃	phoc	
+喚	phọn	
+奐	phọn	
+渙	phọn	
+煥	phọn	
+瘓	phọn	
+緩	phọn	
+寛	phón	
+寬	phón	
+歡	phón	
+獾	phón	
+貛	phón	
+髖	phón	
+䝔	phón	
+欵	phỏn	
+款	phỏn	
+浣	phỏn	
+澣	phỏn	
+皖	phỏn	
+盥	phỏn	
+睆	phỏn	
+莞	phỏn	
+詪	phỏn	
+房	phõng	
+妨	phòng	
+防	phòng	
+魴	phòng	
+匚	phóng	
+塃	phóng	
+慌	phóng	
+放	phóng	
+方	phóng	
+枋	phóng	
+肓	phóng	
+芳	phóng	
+荒	phóng	
+蚄	phóng	
+謊	phóng	
+邡	phóng	
+鄺	phóng	
+鈁	phóng	
+仿	phỏng	
+倣	phỏng	
+坊	phỏng	
+幌	phỏng	
+彷	phỏng	
+怳	phỏng	
+恍	phỏng	
+昉	phỏng	
+晃	phỏng	
+晄	phỏng	
+曠	phỏng	
+枋	phỏng	
+況	phỏng	
+皝	phỏng	
+皩	phỏng	
+眆	phỏng	
+眪	phỏng	
+紡	phỏng	
+肪	phỏng	
+舫	phỏng	
+訪	phỏng	
+貺	phỏng	
+蛞	phót	
+闊	phót	
+呼	phũ	
+婦	phũ	
+扶	phũ	
+絝	phũ	
+袴	phũ	
+褲	phũ	
+乎	phù	
+俘	phù	
+夫	phù	
+孚	phù	
+孵	phù	
+扶	phù	
+枎	phù	
+桴	phù	
+烀	phù	
+稃	phù	
+符	phù	
+罦	phù	
+芙	phù	
+苻	phù	
+莩	phù	
+虖	phù	
+蚨	phù	
+郛	phù	
+鄜	phù	
+鈇	phù	
+鳧	phù	
+付	phụ	
+傅	phụ	
+怙	phụ	
+戶	phụ	
+戸	phụ	
+扈	phụ	
+敷	phụ	
+柎	phụ	
+滬	phụ	
+父	phụ	
+祜	phụ	
+腐	phụ	
+訃	phụ	
+負	phụ	
+賻	phụ	
+輔	phụ	
+鄠	phụ	
+附	phụ	
+駙	phụ	
+鮒	phụ	
+仆	phú	
+伕	phú	
+副	phú	
+呋	phú	
+呼	phú	
+咐	phú	
+唿	phú	
+夫	phú	
+富	phú	
+庫	phú	
+戲	phú	
+戽	phú	
+枎	phú	
+柎	phú	
+滹	phú	
+膚	phú	
+虖	phú	
+賦	phú	
+赴	phú	
+趺	phú	
+跗	phú	
+軤	phú	
+麩	phú	
+乕	phủ	
+俛	phủ	
+俯	phủ	
+俿	phủ	
+唬	phủ	
+府	phủ	
+拊	phủ	
+撫	phủ	
+斧	phủ	
+柎	phủ	
+楛	phủ	
+滏	phủ	
+滸	phủ	
+父	phủ	
+狜	phủ	
+琥	phủ	
+甫	phủ	
+盙	phủ	
+簠	phủ	
+脯	phủ	
+腑	phủ	
+苦	phủ	
+虍	phủ	
+虎	phủ	
+虝	phủ	
+釜	phủ	
+頫	phủ	
+黼	phủ	
+䯽	phủ	
+𩭍	phủ	
+伏	phùc	
+伏	phục	
+匐	phục	
+宓	phục	
+幞	phục	
+復	phục	
+斛	phục	
+服	phục	
+栿	phục	
+洑	phục	
+絥	phục	
+茯	phục	
+菔	phục	
+袱	phục	
+襆	phục	
+鴔	phục	
+𩢰	phục	
+幅	phuc	
+復	phuc	
+福	phuc	
+腹	phuc	
+蝠	phuc	
+蝮	phuc	
+複	phuc	
+覆	phuc	
+輻	phuc	
+馥	phuc	
+鰒	phuc	
+僨	phoãn	
+奮	phoãn	
+忿	phoãn	
+憤	phoãn	
+瀵	phoãn	
+糞	phoãn	
+鱝	phoãn	
+垣	phoàn	
+墳	phoàn	
+桓	phoàn	
+汾	phoàn	
+洹	phoàn	
+濆	phoàn	
+焚	phoàn	
+萑	phoàn	
+蚠	phoàn	
+蚡	phoàn	
+豶	phoàn	
+賁	phoàn	
+鼢	phoàn	
+份	phoạn	
+分	phoạn	
+坌	phoạn	
+分	phoán	
+勛	phoán	
+勳	phoán	
+吩	phoán	
+塤	phoán	
+壎	phoán	
+婚	phoán	
+惛	phoán	
+昏	phoán	
+曛	phoán	
+棼	phoán	
+氛	phoán	
+涽	phoán	
+湣	phoán	
+煇	phoán	
+熏	phoán	
+燻	phoán	
+獯	phoán	
+玢	phoán	
+瞓	phoán	
+窨	phoán	
+糞	phoán	
+紛	phoán	
+芬	phoán	
+葷	phoán	
+薰	phoán	
+訓	phoán	
+酚	phoán	
+醺	phoán	
+閽	phoán	
+䎜	phoán	
+粉	phoản	
+摓	phùng	
+渢	phùng	
+漨	phùng	
+縫	phùng	
+艂	phùng	
+菶	phùng	
+逢	phùng	
+馮	phùng	
+𠗦	phùng	
+塳	phụng	
+奉	phụng	
+甮	phụng	
+鳳	phụng	
+仹	phúng	
+夆	phúng	
+妦	phúng	
+封	phúng	
+峯	phúng	
+峰	phúng	
+捀	phúng	
+楓	phúng	
+灃	phúng	
+烽	phúng	
+瘋	phúng	
+碸	phúng	
+莑	phúng	
+葑	phúng	
+蘴	phúng	
+蜂	phúng	
+豊	phúng	
+豐	phúng	
+酆	phúng	
+鋒	phúng	
+鎽	phúng	
+鏠	phúng	
+風	phúng	
+麷	phúng	
+㛔	phúng	
+㷭	phúng	
+𡊋	phúng	
+𧯮	phúng	
+俸	phủng	
+唪	phủng	
+捀	phủng	
+諷	phủng	
+賵	phủng	
+䩬	phủng	
+忽	phùt	
+佛	phụt	
+怫	phụt	
+㧾	phút	
+佛	phut	
+唿	phut	
+囫	phut	
+堀	phut	
+弗	phut	
+忽	phut	
+怫	phut	
+惚	phut	
+拂	phut	
+氟	phut	
+淴	phut	
+矻	phut	
+砩	phut	
+祓	phut	
+窟	phut	
+笏	phut	
+笰	phut	
+紱	phut	
+紼	phut	
+芾	phut	
+茀	phut	
+鍃	phut	
+韍	phut	
+鮄	phut	
+黻	phut	
+㧾	phut	
+䀟	phut	
+𥄱	phut	
+𦁕	phut	
 嘎	kã	
 家	kã	
 尕	kã	
@@ -9663,461 +9663,461 @@
 術	sụt	
 述	sụt	
 鉥	sụt	
-亝	tsài	
-懠	tsài	
-薺	tsài	
-蠐	tsài	
-齊	tsài	
-凄	tsái	
-切	tsái	
-悽	tsái	
-棲	tsái	
-沏	tsái	
-淒	tsái	
-砌	tsái	
-緀	tsái	
-萋	tsái	
-𪗏	tsái	
-呔	tsải	
-銻	tsải	
-賊	tsạc	
-鰂	tsạc	
-蠶	tsãm	
-巉	tsàm	
-慚	tsàm	
-欃	tsàm	
-讒	tsàm	
-饞	tsàm	
-參	tsám	
-叅	tsám	
-噆	tsám	
-摻	tsám	
-攙	tsám	
-瘮	tsám	
-穇	tsám	
-蔘	tsám	
-驂	tsám	
-參	tsảm	
-慘	tsảm	
-黲	tsảm	
-殘	tsãn	
-殘	tsàn	
-嘆	tsán	
-湌	tsán	
-飡	tsán	
-餐	tsán	
-䱗	tsán	
-燦	tsản	
-璨	tsản	
-粲	tsản	
-層	tsành	
-曾	tsành	
-嘈	tsào	
-曹	tsào	
-槽	tsào	
-漕	tsào	
-艚	tsào	
-螬	tsào	
-鰽	tsào	
-噪	tsáo	
-操	tsáo	
-澡	tsáo	
-燥	tsáo	
-糙	tsáo	
-藻	tsáo	
-趮	tsáo	
-躁	tsáo	
-㿷	tsáo	
-屮	tsảo	
-艸	tsảo	
-草	tsảo	
-甴	tsàt	
-遢	tsàt	
-羍	tsát	
-踏	tsát	
-遢	tsát	
-撻	tsat	
-斜	tsè	
-邪	tsè	
-切	tsích	
-竊	tsích	
-俶	tsich	
-倜	tsich	
-切	tsich	
-剔	tsich	
-嘁	tsich	
-忑	tsich	
-忒	tsich	
-惕	tsich	
-慝	tsich	
-慼	tsich	
-慽	tsich	
-戚	tsich	
-槭	tsich	
-脦	tsich	
-裼	tsich	
-趯	tsich	
-鋱	tsich	
-前	tsình	
-情	tsình	
-錢	tsình	
-䝼	tsình	
-仟	tsính	
-千	tsính	
-圊	tsính	
-扦	tsính	
-氰	tsính	
-淸	tsính	
-清	tsính	
-箐	tsính	
-芊	tsính	
-菁	tsính	
-蜻	tsính	
-蹮	tsính	
-躚	tsính	
-遷	tsính	
-郬	tsính	
-釺	tsính	
-阡	tsính	
-靑	tsính	
-青	tsính	
-靘	tsính	
-韆	tsính	
-鯖	tsính	
-淺	tsỉnh	
-請	tsỉnh	
-疼	tsếc	
-赤	tsếc	
-憔	tsiều	
-樵	tsiều	
-癄	tsiều	
-瞧	tsiều	
-譙	tsiều	
-顦	tsiều	
-俏	tsiếu	
-峭	tsiếu	
-誚	tsiếu	
-鍫	tsiếu	
-鍬	tsiếu	
-悄	tsiểu	
-愀	tsiểu	
-塹	tsiễm	
-槧	tsiễm	
-簽	tsiễm	
-籖	tsiễm	
-籤	tsiễm	
-撏	tsiềm	
-潛	tsiềm	
-懺	tsiếm	
-暹	tsiếm	
-殲	tsiếm	
-簽	tsiếm	
-讖	tsiếm	
-詳	tsễnh	
-青	tsễnh	
-墻	tsềnh	
-嬙	tsềnh	
-庠	tsềnh	
-廧	tsềnh	
-戕	tsềnh	
-晴	tsềnh	
-暒	tsềnh	
-檣	tsềnh	
-爿	tsềnh	
-牆	tsềnh	
-祥	tsềnh	
-羏	tsềnh	
-翔	tsềnh	
-艢	tsềnh	
-薔	tsềnh	
-詳	tsềnh	
-嗆	tsếnh	
-戧	tsếnh	
-槍	tsếnh	
-牄	tsếnh	
-瑲	tsếnh	
-篬	tsếnh	
-蹌	tsếnh	
-蹡	tsếnh	
-錆	tsếnh	
-鎗	tsếnh	
-鑲	tsếnh	
-青	tsếnh	
-搶	tsểnh	
-請	tsểnh	
-楱	tsấu	
-湊	tsấu	
-輳	tsấu	
-呫	tsiêp	
-妾	tsiêp	
-踥	tsiêp	
-似	tsĩ	
-糍	tsĩ	
-臍	tsĩ	
-薺	tsĩ	
-蹄	tsĩ	
-粢	tsì	
-糍	tsì	
-餈	tsì	
-揌	tsí	
-尋	tsẫm	
-尋	tsầm	
-潯	tsầm	
-灥	tsầm	
-蕁	tsầm	
-覃	tsầm	
-鐔	tsầm	
-鱘	tsầm	
-侵	tsấm	
-僉	tsấm	
-唚	tsấm	
-摻	tsấm	
-簽	tsấm	
-纖	tsấm	
-鋟	tsấm	
-駸	tsấm	
-寑	tsẩm	
-寢	tsẩm	
-梫	tsẩm	
-親	tsấn	
-戢	tsâp	
-揖	tsâp	
-楫	tsâp	
-檝	tsâp	
-緝	tsâp	
-艥	tsâp	
-蕺	tsâp	
-輯	tsâp	
-㗊	tsâp	
-七	tsât	
-咠	tsât	
-柒	tsât	
-漆	tsât	
-舙	tsât	
-葺	tsât	
-鰍	tsữu	
-囚	tsừu	
-泅	tsừu	
-啾	tsứu	
-揪	tsứu	
-楸	tsứu	
-湊	tsứu	
-湫	tsứu	
-秋	tsứu	
-萩	tsứu	
-鞦	tsứu	
-鞧	tsứu	
-鬏	tsứu	
-鰌	tsứu	
-鰍	tsứu	
-鶖	tsứu	
-龝	tsứu	
-䆋	tsứu	
-痤	tsõ	
-銼	tsõ	
-剉	tsó	
-唑	tsó	
-坐	tsó	
-嵯	tsó	
-挫	tsó	
-搓	tsó	
-痤	tsó	
-瘥	tsó	
-矬	tsó	
-磋	tsó	
-脞	tsó	
-莝	tsó	
-蹉	tsó	
-銼	tsó	
-錯	tsó	
-鹺	tsó	
-菜	tsõi	
-才	tsòi	
-材	tsòi	
-纔	tsòi	
-裁	tsòi	
-財	tsòi	
-䴭	tsòi	
-菜	tsói	
-蔡	tsói	
-埰	tsỏi	
-寀	tsỏi	
-彩	tsỏi	
-採	tsỏi	
-睬	tsỏi	
-綵	tsỏi	
-茝	tsỏi	
-采	tsỏi	
-鑿	tsòc	
-雹	tsòc	
-攛	tsón	
-爨	tsón	
-躥	tsón	
-鑹	tsón	
-爨	tsỏn	
-竄	tsỏn	
-蹌	tsỏn	
-藏	tsòng	
-倉	tsóng	
-傖	tsóng	
-囱	tsóng	
-愴	tsóng	
-滄	tsóng	
-熗	tsóng	
-牎	tsóng	
-牕	tsóng	
-窓	tsóng	
-窗	tsóng	
-窻	tsóng	
-篬	tsóng	
-艙	tsóng	
-蒼	tsóng	
-蹌	tsóng	
-鶬	tsóng	
-𥦗	tsóng	
-卒	tsot	
-撮	tsot	
-猝	tsot	
-吐	tsũ	
-唾	tsũ	
-徂	tsù	
-殂	tsù	
-厝	tsú	
-唑	tsú	
-坐	tsú	
-嵯	tsú	
-措	tsú	
-搓	tsú	
-粗	tsú	
-觕	tsú	
-蹉	tsú	
-酢	tsú	
-醋	tsú	
-麁	tsú	
-麄	tsú	
-麤	tsú	
-徐	tsùy	
-隋	tsùy	
-隨	tsùy	
-催	tsúy	
-啐	tsúy	
-娶	tsúy	
-崔	tsúy	
-推	tsúy	
-摧	tsúy	
-榱	tsúy	
-毳	tsúy	
-淬	tsúy	
-漼	tsúy	
-焌	tsúy	
-璀	tsúy	
-縗	tsúy	
-翠	tsúy	
-脆	tsúy	
-膗	tsúy	
-蛆	tsúy	
-衰	tsúy	
-趣	tsúy	
-趨	tsúy	
-取	tsủy	
-娶	tsủy	
-促	tsuc	
-涑	tsuc	
-禿	tsuc	
-簇	tsuc	
-簌	tsuc	
-蔌	tsuc	
-蔟	tsuc	
-觫	tsuc	
-謖	tsuc	
-踧	tsuc	
-蹙	tsuc	
-蹴	tsuc	
-蹵	tsuc	
-速	tsuc	
-遬	tsuc	
-鵚	tsuc	
-齪	tsuc	
-圳	tsoãn	
-屯	tsoãn	
-屯	tsoãn	
-村	tsoãn	
-榛	tsoãn	
-津	tsoãn	
-溱	tsoãn	
-獉	tsoãn	
-窀	tsoãn	
-肫	tsoãn	
-臻	tsoãn	
-蓁	tsoãn	
-衠	tsoãn	
-諄	tsoãn	
-迍	tsoãn	
-邨	tsoãn	
-佺	tsoàn	
-全	tsoàn	
-嗪	tsoàn	
-囤	tsoàn	
-存	tsoàn	
-巡	tsoàn	
-廵	tsoàn	
-循	tsoàn	
-旬	tsoàn	
-栒	tsoàn	
-栓	tsoàn	
-泉	tsoàn	
-溱	tsoàn	
-痊	tsoàn	
-秦	tsoàn	
-筌	tsoàn	
-荃	tsoàn	
-螓	tsoàn	
-詮	tsoàn	
-蹲	tsoàn	
-輇	tsoàn	
-醛	tsoàn	
-鰁	tsoàn	
-吋	tsoán	
-寸	tsoán	
-村	tsoán	
-𧨸	tsoản	
-蔥	tsũng	
-叢	tsùng	
-従	tsùng	
-從	tsùng	
-悰	tsùng	
-松	tsùng	
-枀	tsùng	
-枩	tsùng	
-柗	tsùng	
-梥	tsùng	
-淞	tsùng	
-漎	tsùng	
-潀	tsùng	
-潨	tsùng	
-灇	tsùng	
-茼	tsùng	
-藂	tsùng	
-賨	tsùng	
-䕺	tsùng	
-𠚪	tsùng	
-𥵫	tsùng	
-匆	tsúng	
-怱	tsúng	
-悤	tsúng	
-樅	tsúng	
-瑽	tsúng	
-璁	tsúng	
-璁	tsúng	
-聰	tsúng	
-蓯	tsúng	
-蔥	tsúng	
-鏦	tsúng	
-騘	tsúng	
-驄	tsúng	
-慫	tsủng	
-𥓿	tsuõ	
-擦	tsút	
+亝	xài	
+懠	xài	
+薺	xài	
+蠐	xài	
+齊	xài	
+凄	xái	
+切	xái	
+悽	xái	
+棲	xái	
+沏	xái	
+淒	xái	
+砌	xái	
+緀	xái	
+萋	xái	
+𪗏	xái	
+呔	xải	
+銻	xải	
+賊	xạc	
+鰂	xạc	
+蠶	xãm	
+巉	xàm	
+慚	xàm	
+欃	xàm	
+讒	xàm	
+饞	xàm	
+參	xám	
+叅	xám	
+噆	xám	
+摻	xám	
+攙	xám	
+瘮	xám	
+穇	xám	
+蔘	xám	
+驂	xám	
+參	xảm	
+慘	xảm	
+黲	xảm	
+殘	xãn	
+殘	xàn	
+嘆	xán	
+湌	xán	
+飡	xán	
+餐	xán	
+䱗	xán	
+燦	xản	
+璨	xản	
+粲	xản	
+層	xành	
+曾	xành	
+嘈	xào	
+曹	xào	
+槽	xào	
+漕	xào	
+艚	xào	
+螬	xào	
+鰽	xào	
+噪	xáo	
+操	xáo	
+澡	xáo	
+燥	xáo	
+糙	xáo	
+藻	xáo	
+趮	xáo	
+躁	xáo	
+㿷	xáo	
+屮	xảo	
+艸	xảo	
+草	xảo	
+甴	xàt	
+遢	xàt	
+羍	xát	
+踏	xát	
+遢	xát	
+撻	xat	
+斜	xè	
+邪	xè	
+切	xích	
+竊	xích	
+俶	xich	
+倜	xich	
+切	xich	
+剔	xich	
+嘁	xich	
+忑	xich	
+忒	xich	
+惕	xich	
+慝	xich	
+慼	xich	
+慽	xich	
+戚	xich	
+槭	xich	
+脦	xich	
+裼	xich	
+趯	xich	
+鋱	xich	
+前	xình	
+情	xình	
+錢	xình	
+䝼	xình	
+仟	xính	
+千	xính	
+圊	xính	
+扦	xính	
+氰	xính	
+淸	xính	
+清	xính	
+箐	xính	
+芊	xính	
+菁	xính	
+蜻	xính	
+蹮	xính	
+躚	xính	
+遷	xính	
+郬	xính	
+釺	xính	
+阡	xính	
+靑	xính	
+青	xính	
+靘	xính	
+韆	xính	
+鯖	xính	
+淺	xỉnh	
+請	xỉnh	
+疼	xếc	
+赤	xếc	
+憔	xiều	
+樵	xiều	
+癄	xiều	
+瞧	xiều	
+譙	xiều	
+顦	xiều	
+俏	xiếu	
+峭	xiếu	
+誚	xiếu	
+鍫	xiếu	
+鍬	xiếu	
+悄	xiểu	
+愀	xiểu	
+塹	xiễm	
+槧	xiễm	
+簽	xiễm	
+籖	xiễm	
+籤	xiễm	
+撏	xiềm	
+潛	xiềm	
+懺	xiếm	
+暹	xiếm	
+殲	xiếm	
+簽	xiếm	
+讖	xiếm	
+詳	xễnh	
+青	xễnh	
+墻	xềnh	
+嬙	xềnh	
+庠	xềnh	
+廧	xềnh	
+戕	xềnh	
+晴	xềnh	
+暒	xềnh	
+檣	xềnh	
+爿	xềnh	
+牆	xềnh	
+祥	xềnh	
+羏	xềnh	
+翔	xềnh	
+艢	xềnh	
+薔	xềnh	
+詳	xềnh	
+嗆	xếnh	
+戧	xếnh	
+槍	xếnh	
+牄	xếnh	
+瑲	xếnh	
+篬	xếnh	
+蹌	xếnh	
+蹡	xếnh	
+錆	xếnh	
+鎗	xếnh	
+鑲	xếnh	
+青	xếnh	
+搶	xểnh	
+請	xểnh	
+楱	xấu	
+湊	xấu	
+輳	xấu	
+呫	xiêp	
+妾	xiêp	
+踥	xiêp	
+似	xĩ	
+糍	xĩ	
+臍	xĩ	
+薺	xĩ	
+蹄	xĩ	
+粢	xì	
+糍	xì	
+餈	xì	
+揌	xí	
+尋	xẫm	
+尋	xầm	
+潯	xầm	
+灥	xầm	
+蕁	xầm	
+覃	xầm	
+鐔	xầm	
+鱘	xầm	
+侵	xấm	
+僉	xấm	
+唚	xấm	
+摻	xấm	
+簽	xấm	
+纖	xấm	
+鋟	xấm	
+駸	xấm	
+寑	xẩm	
+寢	xẩm	
+梫	xẩm	
+親	xấn	
+戢	xâp	
+揖	xâp	
+楫	xâp	
+檝	xâp	
+緝	xâp	
+艥	xâp	
+蕺	xâp	
+輯	xâp	
+㗊	xâp	
+七	xât	
+咠	xât	
+柒	xât	
+漆	xât	
+舙	xât	
+葺	xât	
+鰍	xữu	
+囚	xừu	
+泅	xừu	
+啾	xứu	
+揪	xứu	
+楸	xứu	
+湊	xứu	
+湫	xứu	
+秋	xứu	
+萩	xứu	
+鞦	xứu	
+鞧	xứu	
+鬏	xứu	
+鰌	xứu	
+鰍	xứu	
+鶖	xứu	
+龝	xứu	
+䆋	xứu	
+痤	xõ	
+銼	xõ	
+剉	xó	
+唑	xó	
+坐	xó	
+嵯	xó	
+挫	xó	
+搓	xó	
+痤	xó	
+瘥	xó	
+矬	xó	
+磋	xó	
+脞	xó	
+莝	xó	
+蹉	xó	
+銼	xó	
+錯	xó	
+鹺	xó	
+菜	xõi	
+才	xòi	
+材	xòi	
+纔	xòi	
+裁	xòi	
+財	xòi	
+䴭	xòi	
+菜	xói	
+蔡	xói	
+埰	xỏi	
+寀	xỏi	
+彩	xỏi	
+採	xỏi	
+睬	xỏi	
+綵	xỏi	
+茝	xỏi	
+采	xỏi	
+鑿	xòc	
+雹	xòc	
+攛	xón	
+爨	xón	
+躥	xón	
+鑹	xón	
+爨	xỏn	
+竄	xỏn	
+蹌	xỏn	
+藏	xòng	
+倉	xóng	
+傖	xóng	
+囱	xóng	
+愴	xóng	
+滄	xóng	
+熗	xóng	
+牎	xóng	
+牕	xóng	
+窓	xóng	
+窗	xóng	
+窻	xóng	
+篬	xóng	
+艙	xóng	
+蒼	xóng	
+蹌	xóng	
+鶬	xóng	
+𥦗	xóng	
+卒	xot	
+撮	xot	
+猝	xot	
+吐	xũ	
+唾	xũ	
+徂	xù	
+殂	xù	
+厝	xú	
+唑	xú	
+坐	xú	
+嵯	xú	
+措	xú	
+搓	xú	
+粗	xú	
+觕	xú	
+蹉	xú	
+酢	xú	
+醋	xú	
+麁	xú	
+麄	xú	
+麤	xú	
+徐	xùy	
+隋	xùy	
+隨	xùy	
+催	xúy	
+啐	xúy	
+娶	xúy	
+崔	xúy	
+推	xúy	
+摧	xúy	
+榱	xúy	
+毳	xúy	
+淬	xúy	
+漼	xúy	
+焌	xúy	
+璀	xúy	
+縗	xúy	
+翠	xúy	
+脆	xúy	
+膗	xúy	
+蛆	xúy	
+衰	xúy	
+趣	xúy	
+趨	xúy	
+取	xủy	
+娶	xủy	
+促	xuc	
+涑	xuc	
+禿	xuc	
+簇	xuc	
+簌	xuc	
+蔌	xuc	
+蔟	xuc	
+觫	xuc	
+謖	xuc	
+踧	xuc	
+蹙	xuc	
+蹴	xuc	
+蹵	xuc	
+速	xuc	
+遬	xuc	
+鵚	xuc	
+齪	xuc	
+圳	xoãn	
+屯	xoãn	
+屯	xoãn	
+村	xoãn	
+榛	xoãn	
+津	xoãn	
+溱	xoãn	
+獉	xoãn	
+窀	xoãn	
+肫	xoãn	
+臻	xoãn	
+蓁	xoãn	
+衠	xoãn	
+諄	xoãn	
+迍	xoãn	
+邨	xoãn	
+佺	xoàn	
+全	xoàn	
+嗪	xoàn	
+囤	xoàn	
+存	xoàn	
+巡	xoàn	
+廵	xoàn	
+循	xoàn	
+旬	xoàn	
+栒	xoàn	
+栓	xoàn	
+泉	xoàn	
+溱	xoàn	
+痊	xoàn	
+秦	xoàn	
+筌	xoàn	
+荃	xoàn	
+螓	xoàn	
+詮	xoàn	
+蹲	xoàn	
+輇	xoàn	
+醛	xoàn	
+鰁	xoàn	
+吋	xoán	
+寸	xoán	
+村	xoán	
+𧨸	xoản	
+蔥	xũng	
+叢	xùng	
+従	xùng	
+從	xùng	
+悰	xùng	
+松	xùng	
+枀	xùng	
+枩	xùng	
+柗	xùng	
+梥	xùng	
+淞	xùng	
+漎	xùng	
+潀	xùng	
+潨	xùng	
+灇	xùng	
+茼	xùng	
+藂	xùng	
+賨	xùng	
+䕺	xùng	
+𠚪	xùng	
+𥵫	xùng	
+匆	xúng	
+怱	xúng	
+悤	xúng	
+樅	xúng	
+瑽	xúng	
+璁	xúng	
+璁	xúng	
+聰	xúng	
+蓯	xúng	
+蔥	xúng	
+鏦	xúng	
+騘	xúng	
+驄	xúng	
+慫	xủng	
+𥓿	xuõ	
+擦	xút	
 妒	ụ	
 妬	ụ	
 度	ụ	
