--- a/quocyuchiquongchauyam.dic.yaml
+++ b/quocyuchiquongchauyam.dic.yaml
@@ -84,23 +84,23 @@
 隘	ái	
 餲	ái	
 唉	ại	
-厄	ac	
-呃	ac	
-幄	ac	
-戹	ac	
-扼	ac	
-握	ac	
-軛	ac	
-軶	ac	
-阨	ac	
-阸	ac	
-𧦠	ac	
+厄	ach	
+呃	ach	
+幄	ach	
+戹	ach	
+扼	ach	
+握	ach	
+軛	ach	
+軶	ach	
+阨	ach	
+阸	ach	
+𧦠	ach	
 軛	ảc	
 鈪	ảc	
-軛	ác	
-軶	ác	
-鈪	ác	
-阿	ác	
+軛	ách	
+軶	ách	
+鈪	ách	
+阿	ách	
 菡	ảm	
 殷	an	
 俺	ản	
@@ -450,54 +450,54 @@
 粺	bại	
 薭	bại	
 贁	bại	
-迫	bac	
-㓦	bác	
-㼣	bác	
-伯	bác	
-佰	bác	
-廹	bác	
-挀	bác	
-敀	bác	
-柏	bác	
-栢	bác	
-檗	bác	
-櫱	bác	
-泊	bác	
-濼	bác	
-狛	bác	
-百	bác	
-粨	bác	
-糪	bác	
-絔	bác	
-舶	bác	
-薜	bác	
-蘗	bác	
-袹	bác	
-𤤿	bác	
-兡	bác hăc	
-瓸	bác ngã	
-䇉	bác sinh	
-竡	bác sinh	
-㼟	bạc	
-㿟	bạc	
-䌟	bạc	
-䞳	bạc	
-䳆	bạc	
-䵗	bạc	
-僰	bạc	
-匐	bạc	
-卜	bạc	
-孛	bạc	
-帛	bạc	
-殕	bạc	
-白	bạc	
-舶	bạc	
-苩	bạc	
-菔	bạc	
-蔔	bạc	
-踣	bạc	
-鮊	bạc	
-𤇢	bạc	
+迫	bach	
+㓦	bách	
+㼣	bách	
+伯	bách	
+佰	bách	
+廹	bách	
+挀	bách	
+敀	bách	
+柏	bách	
+栢	bách	
+檗	bách	
+櫱	bách	
+泊	bách	
+濼	bách	
+狛	bách	
+百	bách	
+粨	bách	
+糪	bách	
+絔	bách	
+舶	bách	
+薜	bách	
+蘗	bách	
+袹	bách	
+𤤿	bách	
+兡	bách hăc	
+瓸	bách ngã	
+䇉	bách sinh	
+竡	bách sinh	
+㼟	bạch	
+㿟	bạch	
+䌟	bạch	
+䞳	bạch	
+䳆	bạch	
+䵗	bạch	
+僰	bạch	
+匐	bạch	
+卜	bạch	
+孛	bạch	
+帛	bạch	
+殕	bạch	
+白	bạch	
+舶	bạch	
+苩	bạch	
+菔	bạch	
+蔔	bạch	
+踣	bạch	
+鮊	bạch	
+𤇢	bạch	
 㿀	ban	
 䃑	ban	
 䰉	ban	
@@ -1931,48 +1931,48 @@
 豺	xài	
 齜	xài	
 𡣙	xài	
-吒	xac	
-惻	xac	
-測	xac	
-㥽	xác	
-㨲	xác	
-㩍	xác	
-㩞	xác	
-㿭	xác	
-䁤	xác	
-䊂	xác	
-䜺	xác	
-䶦	xác	
-冊	xác	
-圠	xác	
-坼	xác	
-憡	xác	
-戝	xác	
-拆	xác	
-拺	xác	
-敇	xác	
-柵	xác	
-烢	xác	
-皟	xác	
-矠	xác	
-笧	xác	
-策	xác	
-筞	xác	
-筴	xác	
-箣	xác	
-簎	xác	
-茦	xác	
-萗	xác	
-蓛	xác	
-蠈	xác	
-頙	xác	
-𥑬	xác	
-𥰡	xác	
-䰹	xạc	
-蠈	xạc	
-賊	xạc	
-鰂	xạc	
-鱡	xạc	
+吒	xach	
+惻	xach	
+測	xach	
+㥽	xách	
+㨲	xách	
+㩍	xách	
+㩞	xách	
+㿭	xách	
+䁤	xách	
+䊂	xách	
+䜺	xách	
+䶦	xách	
+冊	xách	
+圠	xách	
+坼	xách	
+憡	xách	
+戝	xách	
+拆	xách	
+拺	xách	
+敇	xách	
+柵	xách	
+烢	xách	
+皟	xách	
+矠	xách	
+笧	xách	
+策	xách	
+筞	xách	
+筴	xách	
+箣	xách	
+簎	xách	
+茦	xách	
+萗	xách	
+蓛	xách	
+蠈	xách	
+頙	xách	
+𥑬	xách	
+𥰡	xách	
+䰹	xạch	
+蠈	xạch	
+賊	xạch	
+鰂	xạch	
+鱡	xạch	
 㕘	xam	
 㜗	xam	
 㠁	xam	
@@ -4685,7 +4685,7 @@
 軑	đại	
 釱	đại	
 𠯈	đại	
-咑	đac	
+咑	đach	
 㚮	đam	
 㜬	đam	
 㴷	đam	
@@ -6321,9 +6321,9 @@
 繲	phái	
 蒯	phái	
 駃	phái	
-謋	phác	
-騞	phác	
-𢪎	phác	
+謋	phách	
+騞	phách	
+𢪎	phách	
 㴀	phan	
 䉒	phan	
 䪛	phan	
@@ -7929,43 +7929,43 @@
 鶛	kái	
 𠝹	kái	
 𨺬	kái	
-㗆	kác	
-㦴	kác	
-䈷	kác	
-䎥	kác	
-䐙	kác	
-䛿	kác	
-䨣	kác	
-䪂	kác	
-佫	kác	
-嗝	kác	
-塥	kác	
-夾	kác	
-愅	kác	
-挌	kác	
-搹	kác	
-格	kác	
-槅	kác	
-滆	kác	
-肐	kác	
-胳	kác	
-膈	kác	
-臵	kác	
-茖	kác	
-蛒	kác	
-袼	kác	
-觡	kác	
-諽	kác	
-鎘	kác	
-隔	kác	
-革	kác	
-鞷	kác	
-韚	kác	
-骼	kác	
-鬲	kác	
-鮥	kác	
-鵅	kác	
-𠺝	kác	
+㗆	kách	
+㦴	kách	
+䈷	kách	
+䎥	kách	
+䐙	kách	
+䛿	kách	
+䨣	kách	
+䪂	kách	
+佫	kách	
+嗝	kách	
+塥	kách	
+夾	kách	
+愅	kách	
+挌	kách	
+搹	kách	
+格	kách	
+槅	kách	
+滆	kách	
+肐	kách	
+胳	kách	
+膈	kách	
+臵	kách	
+茖	kách	
+蛒	kách	
+袼	kách	
+觡	kách	
+諽	kách	
+鎘	kách	
+隔	kách	
+革	kách	
+鞷	kách	
+韚	kách	
+骼	kách	
+鬲	kách	
+鮥	kách	
+鵅	kách	
+𠺝	kách	
 㮭	kam	
 䌠	kam	
 䛓	kam	
@@ -10133,7 +10133,7 @@
 怪	quái	
 恠	quái	
 狤	quái	
-摑	quác	
+摑	quách	
 䚪	quan	
 䤽	quan	
 烪	quan	
@@ -10903,31 +10903,31 @@
 駭	hại	
 骱	hại	
 齘	hại	
-㬨	hac	
-克	hac	
-刻	hac	
-剋	hac	
-喀	hac	
-嚇	hac	
-焃	hac	
-煂	hac	
-爀	hac	
-赫	hac	
-黑	hac	
-䚂	hác	
-咯	hác	
-唬	hác	
-喀	hác	
-嚇	hác	
-客	hác	
-碦	hác	
-衉	hác	
-諕	hác	
-𦴦	hác	
-𪃭	hác	
-䞦	hạc	
-垎	hạc	
-楁	hạc	
+㬨	hach	
+克	hach	
+刻	hach	
+剋	hach	
+喀	hach	
+嚇	hach	
+焃	hach	
+煂	hach	
+爀	hach	
+赫	hach	
+黑	hach	
+䚂	hách	
+咯	hách	
+唬	hách	
+喀	hách	
+嚇	hách	
+客	hách	
+碦	hách	
+衉	hách	
+諕	hách	
+𦴦	hách	
+𪃭	hách	
+䞦	hạch	
+垎	hạch	
+楁	hạch	
 䩂	ham	
 嵌	ham	
 㘚	hảm	
@@ -13121,12 +13121,12 @@
 踩	yải	
 踹	yải	
 䑂	yãi	
-䝟	yác	
-吃	yác	
-吔	yác	
-喫	yác	
-猰	yác	
-窫	yác	
+䝟	yách	
+吃	yách	
+吔	yách	
+喫	yách	
+猰	yách	
+窫	yách	
 𨅝	yánh	
 𨆪	yánh	
 擪	yáp	
@@ -16691,9 +16691,9 @@
 炏	khái	
 𢬿	khái	
 𢬿	khãi	
-緙	khac	
-䘔	khác	
-緙	khác	
+緙	khach	
+䘔	khách	
+緙	khách	
 檻	khãm	
 卡	khat	
 咭	khat	
@@ -17797,9 +17797,9 @@
 嘳	khuái	
 㨤	khuãi	
 擓	khuãi	
-𡁸	khuac	
-𡃈	khuac	
-𡃈	khuác	
+𡁸	khuach	
+𡃈	khuach	
+𡃈	khuách	
 䆲	khuanh	
 框	khuanh	
 眶	khuanh	
@@ -18260,14 +18260,14 @@
 顂	lại	
 鵣	lại	
 𡃤	lại	
-肋	lac	
-喇	lác	
-嘞	lác	
-𨊛	lác	
-勒	lạc	
-砳	lạc	
-簕	lạc	
-肋	lạc	
+肋	lach	
+喇	lách	
+嘞	lách	
+𨊛	lách	
+勒	lạch	
+砳	lạch	
+簕	lạch	
+肋	lạch	
 㩜	lảm	
 擥	lảm	
 攬	lảm	
@@ -20783,21 +20783,21 @@
 売	mại	
 賣	mại	
 邁	mại	
-嚜	mac	
-㓦	mác	
-孹	mác	
-掰	mác	
-擘	mác	
-墨	mạc	
-眽	mạc	
-脈	mạc	
-萬	mạc	
-貉	mạc	
-貊	mạc	
-陌	mạc	
-霢	mạc	
-驀	mạc	
-麥	mạc	
+嚜	mach	
+㓦	mách	
+孹	mách	
+掰	mách	
+擘	mách	
+墨	mạch	
+眽	mạch	
+脈	mạch	
+萬	mạch	
+貉	mạch	
+貊	mạch	
+陌	mạch	
+霢	mạch	
+驀	mạch	
+麥	mạch	
 摱	man	
 𢶯	man	
 𢺳	man	
@@ -22852,22 +22852,22 @@
 餀	ngại	
 騃	ngại	
 鴱	ngại	
-呃	ngac	
-眲	ngac	
-㟯	ngạc	
-㣂	ngạc	
-䩹	ngạc	
-䱮	ngạc	
-峉	ngạc	
-磀	ngạc	
-詻	ngạc	
-逆	ngạc	
-鈪	ngạc	
-頟	ngạc	
-額	ngạc	
-𠱘	ngạc	
-𠸺	ngạc	
-𡅅	ngạc	
+呃	ngach	
+眲	ngach	
+㟯	ngạch	
+㣂	ngạch	
+䩹	ngạch	
+䱮	ngạch	
+峉	ngạch	
+磀	ngạch	
+詻	ngạch	
+逆	ngạch	
+鈪	ngạch	
+頟	ngạch	
+額	ngạch	
+𠱘	ngạch	
+𠸺	ngạch	
+𡅅	ngạch	
 啱	ngam	
 㘙	ngàm	
 㺂	ngàm	
@@ -24045,29 +24045,29 @@
 簲	pài	
 輫	pài	
 𥱼	pài	
-啪	pac	
-䞟	pác	
-岶	pác	
-帕	pác	
-拍	pác	
-柏	pác	
-檗	pác	
-櫱	pác	
-汃	pác	
-泊	pác	
-洦	pác	
-湐	pác	
-珀	pác	
-砶	pác	
-粕	pác	
-舶	pác	
-蘗	pác	
-袙	pác	
-霸	pác	
-魄	pác	
-𢫦	pác	
-𣬚	pác	
-𤧥	pác	
+啪	pach	
+䞟	pách	
+岶	pách	
+帕	pách	
+拍	pách	
+柏	pách	
+檗	pách	
+櫱	pách	
+汃	pách	
+泊	pách	
+洦	pách	
+湐	pách	
+珀	pách	
+砶	pách	
+粕	pách	
+舶	pách	
+蘗	pách	
+袙	pách	
+霸	pách	
+魄	pách	
+𢫦	pách	
+𣬚	pách	
+𤧥	pách	
 㐴	pan	
 扳	pan	
 攀	pan	
@@ -25149,19 +25149,19 @@
 咶	sãi	
 舐	sãi	
 舓	sãi	
-䂹	sác	
-䞽	sác	
-䨛	sác	
-愬	sác	
-拺	sác	
-摵	sác	
-擌	sác	
-栜	sác	
-梀	sác	
-槭	sác	
-洓	sác	
-索	sác	
-𢱢	sác	
+䂹	sách	
+䞽	sách	
+䨛	sách	
+愬	sách	
+拺	sách	
+摵	sách	
+擌	sách	
+栜	sách	
+梀	sách	
+槭	sách	
+洓	sách	
+索	sách	
+𢱢	sách	
 㭅	sam	
 㰑	sam	
 㺑	sam	
@@ -29512,40 +29512,40 @@
 恚	vại	
 瘣	vại	
 蘾	vại	
-㕷	vac	
-㗲	vac	
-咟	vac	
-㓰	vạc	
-㖪	vạc	
-㠛	vạc	
-㦎	vạc	
-㦯	vạc	
-㩇	vạc	
-䐸	vạc	
-䦝	vạc	
-䪝	vạc	
-䬉	vạc	
-䰥	vạc	
-划	vạc	
-剨	vạc	
-劃	vạc	
-嚄	vạc	
-嫿	vạc	
-惑	vạc	
-或	vạc	
-捇	vạc	
-掝	vạc	
-搳	vạc	
-湱	vạc	
-畫	vạc	
-畵	vạc	
-砉	vạc	
-繣	vạc	
-蜮	vạc	
-謋	vạc	
-豁	vạc	
-韄	vạc	
-騞	vạc	
+㕷	vach	
+㗲	vach	
+咟	vach	
+㓰	vạch	
+㖪	vạch	
+㠛	vạch	
+㦎	vạch	
+㦯	vạch	
+㩇	vạch	
+䐸	vạch	
+䦝	vạch	
+䪝	vạch	
+䬉	vạch	
+䰥	vạch	
+划	vạch	
+剨	vạch	
+劃	vạch	
+嚄	vạch	
+嫿	vạch	
+惑	vạch	
+或	vạch	
+捇	vạch	
+掝	vạch	
+搳	vạch	
+湱	vạch	
+畫	vạch	
+畵	vạch	
+砉	vạch	
+繣	vạch	
+蜮	vạch	
+謋	vạch	
+豁	vạch	
+韄	vạch	
+騞	vạch	
 㘤	van	
 䘎	van	
 壪	van	
@@ -30979,89 +30979,89 @@
 砦	chại	
 豸	chại	
 宅	chảc	
-㖽	chác	
-㳻	chác	
-㺓	chác	
-䂝	chác	
-䇥	chác	
-䍉	chác	
-䯔	chác	
-咋	chác	
-唶	chác	
-嘖	chác	
-嫧	chác	
-岝	chác	
-幘	chác	
-柞	chác	
-樍	chác	
-瞔	chác	
-矺	chác	
-砸	chác	
-磔	chác	
-磧	chác	
-窄	chác	
-笮	chác	
-簀	chác	
-籷	chác	
-粍	chác	
-舴	chác	
-蔶	chác	
-虴	chác	
-蚱	chác	
-諎	chác	
-謮	chác	
-責	chác	
-賾	chác	
-迮	chác	
-適	chác	
-齰	chác	
-㒀	chạc	
-㟙	chạc	
-㡯	chạc	
-㣱	chạc	
-㭙	chạc	
-㭦	chạc	
-䊞	chạc	
-䕉	chạc	
-䕪	chạc	
-䞰	chạc	
-䤩	chạc	
-䮰	chạc	
-乇	chạc	
-厇	chạc	
-咋	chạc	
-嘖	chạc	
-宅	chạc	
-岝	chạc	
-択	chạc	
-摘	chạc	
-擇	chạc	
-擲	chạc	
-擿	chạc	
-檡	chạc	
-歵	chạc	
-沢	chạc	
-泎	chạc	
-澤	chạc	
-烢	chạc	
-睪	chạc	
-矠	chạc	
-磔	chạc	
-礋	chạc	
-翟	chạc	
-葃	chạc	
-蠌	chạc	
-襗	chạc	
-謫	chạc	
-讁	chạc	
-賾	chạc	
-蹢	chạc	
-躑	chạc	
-適	chạc	
-雿	chạc	
-鸅	chạc	
-齚	chạc	
-齰	chạc	
+㖽	chách	
+㳻	chách	
+㺓	chách	
+䂝	chách	
+䇥	chách	
+䍉	chách	
+䯔	chách	
+咋	chách	
+唶	chách	
+嘖	chách	
+嫧	chách	
+岝	chách	
+幘	chách	
+柞	chách	
+樍	chách	
+瞔	chách	
+矺	chách	
+砸	chách	
+磔	chách	
+磧	chách	
+窄	chách	
+笮	chách	
+簀	chách	
+籷	chách	
+粍	chách	
+舴	chách	
+蔶	chách	
+虴	chách	
+蚱	chách	
+諎	chách	
+謮	chách	
+責	chách	
+賾	chách	
+迮	chách	
+適	chách	
+齰	chách	
+㒀	chạch	
+㟙	chạch	
+㡯	chạch	
+㣱	chạch	
+㭙	chạch	
+㭦	chạch	
+䊞	chạch	
+䕉	chạch	
+䕪	chạch	
+䞰	chạch	
+䤩	chạch	
+䮰	chạch	
+乇	chạch	
+厇	chạch	
+咋	chạch	
+嘖	chạch	
+宅	chạch	
+岝	chạch	
+択	chạch	
+摘	chạch	
+擇	chạch	
+擲	chạch	
+擿	chạch	
+檡	chạch	
+歵	chạch	
+沢	chạch	
+泎	chạch	
+澤	chạch	
+烢	chạch	
+睪	chạch	
+矠	chạch	
+磔	chạch	
+礋	chạch	
+翟	chạch	
+葃	chạch	
+蠌	chạch	
+襗	chạch	
+謫	chạch	
+讁	chạch	
+賾	chạch	
+蹢	chạch	
+躑	chạch	
+適	chạch	
+雿	chạch	
+鸅	chạch	
+齚	chạch	
+齰	chạch	
 㪠	cham	
 䉇	cham	
 䍼	cham	
